WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170279
Web Inspector: Assertion failure in InspectorStyleProperty::setRawTextFromStyleDeclaration
https://bugs.webkit.org/show_bug.cgi?id=170279
Summary
Web Inspector: Assertion failure in InspectorStyleProperty::setRawTextFromSty...
Matt Baker
Reported
2017-03-30 03:28:18 PDT
Summary: Assertion failure in InspectorStyleProperty::setRawTextFromStyleDeclaration. InspectorStyleSheet.h:111: ASSERT(end <= styleDeclaration.length()); InspectorStyleProperty is being created with an invalid range end. The assertion is harmless, as String::substring checks the passed in length. Reproduced Test Case: <html> <style>html{-webkit-text-size-adjust:none}</style> </html>
Attachments
Patch
(2.28 KB, patch)
2017-03-30 03:54 PDT
,
Matt Baker
no flags
Details
Formatted Diff
Diff
Patch
(4.34 KB, patch)
2017-03-30 12:44 PDT
,
Matt Baker
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Matt Baker
Comment 1
2017-03-30 03:29:05 PDT
<
rdar://problem/30200492
>
Matt Baker
Comment 2
2017-03-30 03:54:02 PDT
Created
attachment 305853
[details]
Patch
Blaze Burg
Comment 3
2017-03-30 09:47:32 PDT
Comment on
attachment 305853
[details]
Patch Please add a test case that asserts without this change.
Matt Baker
Comment 4
2017-03-30 12:44:25 PDT
Created
attachment 305875
[details]
Patch
Matt Baker
Comment 5
2017-03-30 12:50:59 PDT
Added a stylesheet to inspector/css/getAllStyleSheets.html, which did not cause the test to timeout when running with --debug, as I expected. Inspecting the test page in a debug build asserts as expected.
Dave Hyatt
Comment 6
2017-03-30 15:15:32 PDT
Comment on
attachment 305875
[details]
Patch r=me
WebKit Commit Bot
Comment 7
2017-03-30 15:37:37 PDT
Comment on
attachment 305875
[details]
Patch Clearing flags on attachment: 305875 Committed
r214634
: <
http://trac.webkit.org/changeset/214634
>
WebKit Commit Bot
Comment 8
2017-03-30 15:37:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug